# newmumps

./: .gitignore  Cargo.toml  README.md  local.db
.github/: copilot-instructions.md
migrations/: 001_create_patient_table.sql  002_create_user_table.sql  003_create_institution_table.sql  004_create_facility_table.sql  005_create_provider_table.sql
pkg/sumdb/sum.golang.org/: latest
src/: main.rs
src/domain/: allergy.rs  drug.rs  facility.rs  hospital_location.rs  institution.rs  new_person.rs  order.rs  package.rs  patient.rs  patient_movement_transaction.rs  prescription.rs  protocol.rs  provider.rs  radiology_exam.rs  staff.rs  treating_specialty.rs  user.rs  ward.rs  ward_location.rs
src/domain/adt/: absence.rs  admission.rs  admission_diagnosis.rs  adt_event_log.rs  bed.rs  bed_assignment.rs  bed_status_history.rs  discharge.rs  discharge_disposition.rs  leave_of_absence.rs  pass.rs  patient_adt_data_correction_log.rs  patient_adt_data_quality_audit.rs  patient_adt_exception_report.rs  patient_adt_notification_log.rs  patient_behavioral_event_log.rs  patient_code_status.rs  patient_discharge_follow_up.rs  patient_discharge_planning_note.rs  patient_elopement_risk.rs  patient_ethics_consultation.rs  patient_fall_risk_assessment.rs  patient_family_contact_log.rs  patient_infection_control_event.rs  patient_isolation_status.rs  patient_movement.rs  patient_palliative_care_note.rs  patient_readmission_risk.rs  patient_restraint_log.rs  patient_social_work_referral.rs  patient_spiritual_care_note.rs  (+6 more)
src/dto/: patient_dto.rs
src/handlers/: patient_handler.rs
(+214 files in other folders)
